# Cosmic-PhotoBrowser-Dist

./: CHANGELOG.md  Cargo.toml  README.md
docs/: ARCHITECTURE.md
docs/superpowers/plans/: 2026-06-23-photobrowser-release-cleanup.md
docs/superpowers/specs/: 2026-06-23-photobrowser-release-cleanup-design.md
src/: browser_state.rs  catalog.rs  config.rs  cosmic_adapter.rs  cull.rs  decode.rs  decoded_image.rs  dedupe.rs  develop.rs  export.rs  folder_tree.rs  histogram.rs  inspection.rs  lib.rs  main.rs  metadata.rs  nav.rs  preview_cache.rs  scan.rs  tasks.rs  xmp.rs
src/app/: mod.rs  update_cull.rs  update_decode.rs  update_duplicates.rs  update_export.rs  update_filter.rs  update_grid.rs  update_keyboard.rs  update_loupe.rs  update_nav.rs  update_settings.rs
src/thumb/: cache.rs  mod.rs  worker.rs  xdg.rs
src/view/: color.rs  compare.rs  grid.rs  loupe.rs  mod.rs  preview.rs  sidebar.rs
